[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "webuplink"
dynamic = ["version"]
description = "Official Python SDK for WebUplink — the whole web, as function calls."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.0,<3.0",
]
keywords = ["webuplink", "ai-agent", "browser", "web-automation", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
authors = [
    { name = "WebUplink", email = "dev@webuplink.ai" },
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "respx>=0.22",
    "ruff>=0.11",
    "pyright>=1.1",
]

[project.urls]
Homepage = "https://webuplink.ai"
Documentation = "https://webuplink.ai/docs"
Repository = "https://github.com/webuplink-dev/webuplink-python"

[tool.hatch.version]
path = "src/webuplink/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/webuplink"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
